dfir_rs/tests/compile-fail/datalog_filter_badtypes.stderr
error[E0369]: binary operation `>` cannot be applied to type `Uncomparable`
  --> tests/compile-fail/datalog_filter_badtypes.rs:10:29
   |
10 |         out(123) :- in1(a), (a > a)
   |                             ^^^^^^^
   |
note: an implementation of `PartialOrd` might be missing for `Uncomparable`
  --> tests/compile-fail/datalog_filter_badtypes.rs:4:1
   |
4  | struct Uncomparable;
   | ^^^^^^^^^^^^^^^^^^^ must implement `PartialOrd`
help: consider annotating `Uncomparable` with `#[derive(PartialEq, PartialOrd)]`
   |
4  + #[derive(PartialEq, PartialOrd)]
5  | struct Uncomparable;
   |
